# teo-main

./: .travis.yml  CMakeLists.txt
doc/: teo_install_on_ubuntu_14_10.md
libraries/: CMakeLists.txt
libraries/KdlVectorConverterLib/: CMakeLists.txt
libraries/TeoOpenrave/: CMakeLists.txt
libraries/TeoOpenrave/YarpRobot/: CMakeLists.txt  YarpRobot.cpp
libraries/TeoYarp/BasicCartesianControl/: CMakeLists.txt
libraries/TeoYarp/BasicTwoLimbCartesianControl/: BasicTwoLimbCartesianControl.hpp  ICartesianControlImpl.cpp  RateThreadImpl.cpp
libraries/TeoYarp/CartesianControlClient/: CMakeLists.txt
libraries/TeoYarp/CartesianControlServer/: CMakeLists.txt
libraries/TeoYarp/FakeControlboard/: CMakeLists.txt
libraries/TeoYarp/FakeControlboardOR/: CMakeLists.txt  IPositionImpl.cpp
libraries/TeoYarp/KdlSolver/: CMakeLists.txt
libraries/TrajectoryLib/: CMakeLists.txt  GaitTrajectory.cpp
python/teoCollisionAvoidance/test/: test.py
test/: CMakeLists.txt  testBasicCartesianControl.cpp  testKdlSolver.cpp  testKdlSolverFromFile.cpp
